--- a/index.html
+++ b/index.html
@@ -2,116 +2,15 @@
 <html lang="en">
 
 <head>
-    <title>Pictura Mundi</title>
-    <link id="favicon" rel="icon" href="favicon/light.svg">
+    <title>picturamundi</title>
+    <!--<link id="favicon" rel="icon" href="favicon/light.svg">-->
+    <link id="favicon" rel="icon" href="favicon/favicon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
     <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
-
-<div id="content">
-
-
-    <div id="sidebar" class="home">
-        <div id="banner"><a href="index.html">Pictura Mundi</a></div>
-        <div id="pages">
-            <p><a href="index.html" class="active">Home</a></p>
-            <p><a href="digital.html">Digital Writing</a></p>
-            <p><a href="analog.html">Analog Writing</a></p>
-            <p><button id="theme-toggle">[Appearance]</button></p>
-        </div>
-        <div id="headings">
-                <p><a href="http://picturamundi.com">picturamundi.com</a></p>
-                <p><a href="mailto:picturamundi@protonmail.com?" target="_blank">picturamundi@pm.me</a></p>
-                <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
-                <!--<li><a href="https://github.com/picturamundi" target="_blank">picturamundi</a></li>-->
-                <!--<li>Deskthority: <a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22444" target="_blank">picturamundi</a></li>-->
-                <!--<p><a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22045" target="_blank">u/picturamundi</a></p>-->
-        </div>
-    </div>
-
-<!--
---------------------------------------------------------------------------------------------------------------
--->
-
-    <div id="main">
-        <div id="banner2"><a href="index.html">Pictura Mundi</a></div>
-
-        <h1 id="hi" class="first"><a class="anchor" href="#hi"></a>Things I've made</h1>
-
-        <p>Simple Websites</p>
-        <ul>
-            <li><a href="https://www.toyotawar.com" target="_blank">The Great Toyota War Handbook</a></li>
-            <li><a href="https://www.st-andrew.site" target="_blank">St.Andrew sanctuary</a></li>
-            <!--<li><a href="https://picturamundi.github.io/runner/" target="_blank">Runner Game</a></li>-->
-        </ul>
-        <p>The Great Toyota War board game</p>
-        <ul>
-            <li><a href="https://www.toyotawar.com" target="_blank">The Great Toyota War Handbook</a></li>
-            <li><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2570889084" target="_blank">The Great Toyota War on Steam</a></li>
-        </ul>
-        <!--<p>CSS themes</p>
-        <ul>
-            <li><a href="https://github.com/picturamundi/adoc-theme" target="_blank">Asciidoc styles</a></li>
-            <li><a href="https://github.com/picturamundi/populi-theme" target="_blank">Populi dark mode</a></li>
-        </ul>-->
-        <p>Writing tools (this site)</p>
-        <ul>
-            <li><a href="analog.html">Cursive writing system</a></li>
-            <li><a href="digital.html">Custom mechanical keyboard</a></li>
-        </ul>
-        <!--<p>Research and writing</p>
-        <ul>
-            <li><a href="https://www.academia.edu/72708020/Lutheran_Abolitionists_in_19th_Century_North_America" target="_blank">Lutheran Abolitionists in 19th-Century North America</a></li>
-        </ul>-->
-
-        <h1>picturamundi.com</h1>
-
-        <p>Tinkering with writing tools tends to be the focus around here. 
-           Writing tools can be both physical writing instruments as well as writing systems. 
-           Inks, scripts, mechanical keyboard switches... I like it all.</p>
-
-        <p>Here is a picture of some of my current exploration tunnels — this is not a rigid structure.</p>
-
-        <pre>
-
-HOME
-|
-|__ Things I've made
-|__ picturamundi.com
-
-Writing tools
-|
-|__ Digital: Planck
-|   |
-|   |__ Hardware
-|   |__ Software
-|   |__ Keymap.c
-|
-|
-|__ Analog: Flex Pen
-
-Writing systems
-|
-|__ Alphabet
-|__ Cursive
-
-        </pre>
-        
-        <p>I've got two main projects I tend to spend most of my time on:</p>
-        <p>I like to think of my Planck keyboard as an exercise in creatively combining vintage keyboard design and engineering 
-            with modern custom keyboard hardware and software.
-            The goal is that these come together as the perfect writing tool tailored both to the shape of my mind and the mechanics of my fingers.</p>
-        <p>I like to think of my script as a playful exploration into the frustrating tension between handwriting ergonomics, visual appeal, and rationale.
-            As with the keyboard, the goal is that these come together as a practical and enjoyable writing experience that results in a beautiful and legible text.
-        </p> 
-
-    </div>
-
-</div>
-
 </body>
 
 </html>
