--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
 
     #scroll {
         padding-right: 20px;
+        padding-bottom: 50px;
         position: absolute;
         height: inherit;
         width: inherit;
@@ -440,7 +441,7 @@
         left: 0px;
         width: auto;
         height: auto;
-        padding: 100px 30px 0px 30px;
+        padding: 60px 30px 0px 30px;
     }
 
     main {
