return home animation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <header class="banner">
                         <div id="avatar"><a href="run/index.html"><img src="images/avatar.gif" alt=""></a></div>
-                        <div id="banner-left"><a href="index.html">Pictura Mundi</a></div>
+                        <div id="banner-left"><a onclick="home()">Pictura Mundi</a></div>
                         <div id="author">Matthias Szobody</div>
                     </header>
 
@@ -446,7 +446,7 @@
 
     main {
         width: 300px;
-        height: 450px;
+        height: 510px;
     }
 
     #main-type {
