--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="content">
         <div id="logo" style="position: absolute">
-            <img src="images/animation-5.gif" alt="" style="width: 300px;">
+            <img src="images/animation-6.gif" alt="" style="width: 300px;">
             <p>Pictura Mundi</p>
         </div>
         <!-- <div id="top-spacer"></div> -->
@@ -32,7 +32,7 @@
                 <aside id="sidebar" class="home">
 
                     <header class="banner">
-                        <div id="avatar"><a href="run/index.html"><img src="images/avatar.gif" alt=""></a></div>
+                        <div id="avatar"><a onclick="showLogo()"><img src="images/avatar.gif" alt=""></a></div>
                         <div id="banner-left"><a onclick="home()">Pictura Mundi</a></div>
                         <div id="author">Matthias Szobody</div>
                     </header>
