--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <aside id="sidebar">
 
-                <header class="banner home">
+                <header class="shrink" id="banner-left">
                     <a onclick="smallPage(), home()">
                         <div id="name-left" class="name">Pictura Mundi
 
@@ -35,6 +35,9 @@
                 </nav>
 
                 <nav id="keyboard-nav" class="hidden">
+                    <section>
+                        <div id="back"><a onclick="home()">&lt;------ Back</a></div>
+                    </section>
                     <section id="headings">
                         <h3>On this page</h3>
                         <p><a href="#this-is-my-handwriting-game">Introduction</a></p>
@@ -57,8 +60,8 @@
 
             <section id="main-col" class="shrink">
 
-                <header class="banner home">
-                    <a onclick="smallPage(), home()">
+                <header class="shrink" id="banner-right">
+                    <a onclick=" smallPage(), home()">
                         <div id="name-right" class="name">Pictura Mundi</div>
                         <div id="author-right" class="author">Matthias Szobody</div>
                     </a>
@@ -67,11 +70,11 @@
                 <main id="home" class="visible">
                     <article>
                         <section class="hobby">
-                            <h3>Typing software and hardware</h3>
+                            <h3>Typing software</h3>
                             <p>
                                 <a onclick="largePage(), keyboard()">Keyboard firmware</a>
                             </p>
-                            <p><a onclick="largePage(), dvorak()">Dvorak International Keylayout</a></p>
+                            <p><a onclick="largePage(), dvorak()">Dvorak International</a></p>
                         </section>
                         <section class="hobby">
                             <h3>CSS Themes</h3>
