mobile portrait home screen

--- a/index.html
+++ b/index.html
@@ -15,49 +15,6 @@
     <div id="content-wrapper">
         <div id="content" class="shrink">
 
-            <aside id="sidebar">
-
-                <header class="shrink" id="banner-left">
-                    <a onclick="smallPage(), home()">
-                        <div id="name-left" class="name">Pictura Mundi
-
-                        </div>
-                        <div id="author-left" class="author">Matthias Szobody</div>
-                    </a>
-                </header>
-
-                <nav id="home-nav" class="visible">
-                    <section id="headings">
-                        <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
-                        <p><a href="https://reddit.com/user/picturamundi/" target="_blank">/u/picturamundi</a></p>
-                        <p><a href="https://www.keebtalk.com/u/picturamundi" target="_blank">picturamundi</a></p>
-                    </section>
-                </nav>
-
-                <nav id="keyboard-nav" class="hidden">
-                    <section>
-                        <div id="back"><a onclick="home()">&lt;------ Back</a></div>
-                    </section>
-                    <section id="headings">
-                        <h3>On this page</h3>
-                        <p><a href="#this-is-my-handwriting-game">Introduction</a></p>
-                        <p><a href="#alphabet">Alphabet</a></p>
-                        <p><a href="#manuscript">Manuscript</a></p>
-                    </section>
-                    <section id="pages">
-                        <h3>Other pages</h3>
-                        <p><a onclick="home()">Home</a></p>
-                        <p><a onclick="dvorak()">Dvorak Keylayout</a></p>
-                        <p><a href="manuscript.html" class="">Manuscript</a></p>
-                    </section>
-                </nav>
-
-                <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
-
-                <!-- <div id="avatar"><a onclick="showLogo()"><img src="images/avatar.gif" alt=""></a></div> -->
-
-            </aside>
-
             <section id="main-col" class="shrink">
 
                 <header class="shrink" id="banner-right">
@@ -356,6 +313,50 @@
                 </main>
 
             </section>
+
+            <aside id="sidebar">
+
+                <header class="shrink" id="banner-left">
+                    <a onclick="smallPage(), home()">
+                        <div id="name-left" class="name">Pictura Mundi
+
+                        </div>
+                        <div id="author-left" class="author">Matthias Szobody</div>
+                    </a>
+                </header>
+
+                <nav id="home-nav" class="visible">
+                    <section id="headings">
+                        <p id="website-link"><a target="_blank"
+                                href="https://www.keebtalk.com/u/picturamundi">picturamundi.com</a></p>
+                        <p><a href="https://reddit.com/user/picturamundi/" target="_blank">/u/picturamundi</a></p>
+                        <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
+                    </section>
+                </nav>
+
+                <nav id="keyboard-nav" class="hidden">
+                    <section>
+                        <div id="back"><a onclick="home()">&lt;------ Back</a></div>
+                    </section>
+                    <section id="headings">
+                        <h3>On this page</h3>
+                        <p><a href="#this-is-my-handwriting-game">Introduction</a></p>
+                        <p><a href="#alphabet">Alphabet</a></p>
+                        <p><a href="#manuscript">Manuscript</a></p>
+                    </section>
+                    <section id="pages">
+                        <h3>Other pages</h3>
+                        <p><a onclick="home()">Home</a></p>
+                        <p><a onclick="dvorak()">Dvorak Keylayout</a></p>
+                        <p><a href="manuscript.html" class="">Manuscript</a></p>
+                    </section>
+                </nav>
+
+                <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
+
+                <!-- <div id="avatar"><a onclick="showLogo()"><img src="images/avatar.gif" alt=""></a></div> -->
+
+            </aside>
 
 
         </div>
