home content not fixed

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
             </section>
 
-            <aside id="sidebar">
+            <aside id="sidebar" class="home">
 
                 <header class="shrink" id="banner-left">
                     <a onclick="smallPage(), home()">
