--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <div id="content-wrapper">
 
-        <div id="content" class="shrink">
+        <div id="content" class="">
 
-            <section id="main-col" class="shrink">
+            <section id="main-col" class="">
 
-                <header id="banner-right" class="shrink">
+                <header id="banner-right" class="">
                     <a onclick="home()">
-                        <div id="name-right" class="name">Pictura Mundi</div>
-                        <div id="author-right" class="author">Matthias Szobody</div>
+                        <div id="name-right" class="">Pictura Mundi</div>
+                        <div id="author-right" class="">Matthias Szobody</div>
                     </a>
                 </header>
 
@@ -60,7 +60,7 @@
                         <p>The layout is also QWERTY-command.</p>
                         <a href="assets/dvorak-international-qwerty-command.zip" download>
                             <div id="dvorak-download">
-                                <pre>
+                                <pre class="button">
 ,---------------------------------.
 |                                 |
 |  Download Dvorak International  |
@@ -68,7 +68,7 @@
 `---------------------------------’</pre>
                             </div>
                         </a>
-                        <p>.ZIP archive contains a .bundle file which needs to be placed in
+                        <p>The .zip archive contains a .bundle file which needs to be placed in
                             <code>/Library/Keyboard Layouts</code> directory.
                         </p>
                     </article>
@@ -106,7 +106,7 @@
                     </article>
                 </main>
 
-                <main id="keyboard-main" class="main">
+                <main id="keyboard-main" class="">
                     <article>
                         <h3>hello there</h3>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
@@ -243,7 +243,7 @@
 
             <aside id="sidebar">
 
-                <header class="shrink" id="banner-left">
+                <header class="" id="banner-left">
                     <a onclick="home()">
                         <div id="name-left" class="name">Pictura Mundi
 
