--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <main id="home-main">
                     <article>
                         <section class="hobby">
-                            <h3 onclick="adaptLayout();">Typing software</h3>
+                            <h3 onclick="adaptLayout();">Border margin</h3>
                             <p>
                                 <!-- <a onclick="largePage(), keyboard()">Keyboard firmware</a> -->
                                 <a onclick="keyboard()">Keyboard firmware</a>
