--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
 
                 <main id="dvorak-main">
                     <article>
-                        <p>The following keyboard layouts offer practical functionality to Dvorak typists on macOS, as
-                            well as users of small keyboards.</p>
+                        <p>The following keyboard layouts offer practical functionality to Dvorak typists and users of
+                            small keyboards on macOS.</p>
                         <p>Each individual layout can be downloaded as a .zip archive which contains a .bundle file.
-                            This file needs to be placed in the <code>/Library/Keyboard Layouts</code> directory in
-                            macOS.
+                            This file needs to be placed in the <code>/Library/Keyboard Layouts</code> directory.
                         </p>
                         <pre class="button">
 +---------------------------------+
@@ -75,14 +74,11 @@
 
 
                         <h2 id="dvorak-international">Dvorak International</h2>
-                        <p><code>Dvorak International</code> is a keyboard layout for macOS which makes it easier
-                            for Dvorak users to type the following diacritics.
-
-                            It does this by imitating the sams system
-                            of
-                            dead-keys which many QWERTY users know thanks to the
-                            <code>U.S. International - PC</code>
-                            layout.
+                        <p><code>Dvorak International</code> makes it easier for Dvorak users to type a number of
+                            diacritics and accents used in French, Spanish, and other languages. It does this by
+                            imitating the same
+                            system of dead-keys which many QWERTY users know thanks to the
+                            <code>U.S. International - PC</code> layout.
                         </p>
                         <!-- <ul>
                             <li>Apostrophe for accute accent (é) and cedilla (ç)</li>
@@ -101,13 +97,15 @@
 +---------------------------------+</pre>
                             </div>
                         </a>
-                        <p>The layout is also QWERTY-command.</p>
+                        <p>The layout also includes QWERTY commands.</p>
 
                         <h2 id="30-international">30% International</h2>
-                        <p>This layout is based on the U.S. International layout but is modified for small keyboards
+                        <p><code>30% International</code> is a diacritics-focused layout based on
+                            <code>U.S. International</code> with small keyboards in mind
                             (e.g. 30% or 40%). Is uses the semi-colon as a dead key
-                            for the circumflex accent, rather than the caret symbol, as the latter is not as accessible
-                            with small form-factors.</p>
+                            for the circumflex accent, rather than the caret symbol, the latter being not as accessible
+                            with small form-factors.
+                        </p>
                         <div id="dvorak-download">
                             <pre class="button">
 +---------------------------------+
@@ -116,21 +114,21 @@
 |                                 |
 +---------------------------------+</pre>
                         </div>
-                        <p>This layout is based on QWERTY since it is meant to be used with an external keyboard; any
-                            any alternate layouts will are used directly on the external keyboard's controller.
+                        <p>Since it is meant to be used with external keyboards, third layout is QWERTY; any
+                            alternate layouts are implemented directly on the external keyboard's controller.
                         </p>
 
                         <h2 id="dvorak-to-qwerty">Dvorak to QWERTY</h2>
-                        <p>This layout allows an external Dvorak keyboard to be used as a QWERTY keyboard even if a
-                            QWERTY layout is not included in the external keyboard's firmware.</p>
+                        <p><code>Dvorak to QWERTY</code> allows an external Dvorak keyboard to be used as a
+                            QWERTY keyboard even if the QWERTY layout is not included in its firmware.</p>
                         <pre class="button">
 +---------------------------------+
 |                                 |
 |    Download Dvorak to QWERTY    |
 |                                 |
 +---------------------------------+</pre>
-                        <p>The layout does this by
-                            simply mapping a QWERTY key's position to the QWERTY letter which occupies the position of
+                        <p>The layout achieves this conversion by
+                            mapping a QWERTY key's position to the QWERTY letter which occupies the position of
                             that same key in the Dvorak layout.</p>
                     </article>
                 </main>
@@ -202,17 +200,124 @@
                         <table class="tg">
                             <thead>
                                 <tr>
+                                    <th class="tg-8jgo" colspan="2">consonants: lips</th>
+                                    <th class="tg-0pky" colspan="2">bilabial</th>
+                                    <th class="tg-0pky">labiodental</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="tg-0pky" rowspan="2">base</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">p</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">f</td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky">voiced</td>
+                                    <td class="tg-0pky">b</td>
+                                    <td class="tg-0pky">m</td>
+                                    <td class="tg-0pky">v</td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky" rowspan="2">related</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky">voiced</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">w</td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky" rowspan="2">compound</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">cw</td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky">voiced</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">gw</td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <table class="tg">
+                            <thead>
+                                <tr>
+                                    <th class="tg-8jgo" colspan="2">consonants: ridge</th>
+                                    <th class="tg-0pky" colspan="4">alveolar</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="tg-0pky" rowspan="2">base</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">t</td>
+                                    <td class="tg-0pky">s</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky">voiced</td>
+                                    <td class="tg-0pky">d</td>
+                                    <td class="tg-0pky">z</td>
+                                    <td class="tg-0pky">n</td>
+                                    <td class="tg-0pky">l</td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky" rowspan="2">related</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">θ</span></td>
+                                    <td class="tg-0pky">ʃ</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky">voiced</td>
+                                    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">đ</span></td>
+                                    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">ʒ</span></td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky" rowspan="2">compound</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">t</span>ʃ</td>
+                                    <td class="tg-0pky">cw</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                                <tr>
+                                    <td class="tg-0pky">voiced</td>
+                                    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">d</span>ʒ</td>
+                                    <td class="tg-0pky">gw</td>
+                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <table class="tg">
+                            <thead>
+                                <tr>
                                     <th class="tg-8jgo" colspan="2" rowspan="2">27 consonants</th>
                                     <th class="tg-0pky" colspan="2">base letter</th>
                                     <th class="tg-0pky" colspan="2">related</th>
                                     <th class="tg-0pky" colspan="2">compound</th>
                                 </tr>
                                 <tr>
-                                    <th class="tg-0pky">unvoiced</th>
+                                    <th class="tg-0pky">/</th>
                                     <th class="tg-0pky">voiced</th>
-                                    <th class="tg-0pky">unvoiced</th>
+                                    <th class="tg-0pky">/</th>
                                     <th class="tg-0pky">voiced</th>
-                                    <th class="tg-0pky">unvoiced</th>
+                                    <th class="tg-0pky">/</th>
                                     <th class="tg-0pky">voiced</th>
                                 </tr>
                             </thead>
@@ -228,12 +333,12 @@
                                     <td class="tg-0pky"></td>
                                 </tr>
                                 <tr>
+                                    <td class="tg-0pky"></td>
                                     <td class="tg-0pky">m</td>
                                     <td class="tg-0pky"></td>
                                     <td class="tg-0pky">w</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">cw</td>
+                                    <td class="tg-0pky">gw</td>
                                 </tr>
                                 <tr>
                                     <td class="tg-0pky">labiodental</td>
@@ -263,16 +368,16 @@
                                     <td class="tg-0pky"></td>
                                 </tr>
                                 <tr>
-                                    <td class="tg-0pky">n</td>
                                     <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">n</td>
                                     <td class="tg-0pky"></td>
                                     <td class="tg-0pky"></td>
                                     <td class="tg-0pky"></td>
                                     <td class="tg-0pky"></td>
                                 </tr>
                                 <tr>
-                                    <td class="tg-0pky">l</td>
                                     <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">l</td>
                                     <td class="tg-0pky"></td>
                                     <td class="tg-0pky"></td>
                                     <td class="tg-0pky"></td>
@@ -294,8 +399,8 @@
                                     <td class="tg-0pky">g</td>
                                     <td class="tg-0pky"></td>
                                     <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
+                                    <td class="tg-0pky">ks</td>
+                                    <td class="tg-0pky">gz</td>
                                 </tr>
                                 <tr>
                                     <td class="tg-0pky"><span style="font-weight:400;font-style:normal">ŋ</span></td>
@@ -329,6 +434,10 @@
                         <style>
                             table {
                                 margin: 80px 0px;
+                            }
+
+                            .tg td {
+                                min-width: 2.5rem;
                             }
 
                             .tg .tg-8jgo {
@@ -437,9 +546,20 @@
                     </section>
                     <section id="headings">
                         <h3>MacOS keyboard layouts</h3>
-                        <p><a href="#dvorak-international">Dvorak International</a></p>
-                        <p><a href="#30-international">30% International</a></p>
-                        <p><a href="#dvorak-to-qwerty">Dvorak to QWERTY</a></p>
+                        <p><a onclick="dvorakInternation()">Dvorak International</a></p>
+                        <script>
+                            function dvorakInternation() {
+                                document.getElementById("dvorak-international").scrollIntoView();
+                            }
+                            function thirtyInternation() {
+                                document.getElementById("30-international").scrollIntoView();
+                            }
+                            function dvorakToQwerty() {
+                                document.getElementById("dvorak-to-qwerty").scrollIntoView();
+                            }
+                        </script>
+                        <p><a onclick="thirtyInternation()">30% International</a></p>
+                        <p><a onclick="dvorakToQwerty()">Dvorak to QWERTY</a></p>
                     </section>
                     <p><button id="theme-toggle" onclick="themeToggle()">[Theme]</button></p>
                 </nav>
