--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
                                     vertical-align: top
                                 }
                             </style>
+
+                            <!--                         
                         <table class="tg">
                             <thead>
                                 <tr>
@@ -302,133 +304,139 @@
                                     <td class="tg-0pky"></td>
                                 </tr>
                             </tbody>
-                        </table>
+                        </table> -->
 
-                        <table class="tg">
-                            <thead>
-                                <tr>
-                                    <th class="tg-8jgo" colspan="2" rowspan="2">27 consonants</th>
-                                    <th class="tg-0pky" colspan="2">base letter</th>
-                                    <th class="tg-0pky" colspan="2">related</th>
-                                    <th class="tg-0pky" colspan="2">compound</th>
-                                </tr>
-                                <tr>
-                                    <th class="tg-0pky">/</th>
-                                    <th class="tg-0pky">voiced</th>
-                                    <th class="tg-0pky">/</th>
-                                    <th class="tg-0pky">voiced</th>
-                                    <th class="tg-0pky">/</th>
-                                    <th class="tg-0pky">voiced</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="tg-0pky" rowspan="3">lips</td>
-                                    <td class="tg-0pky" rowspan="2">bilabial</td>
-                                    <td class="tg-0pky">p</td>
-                                    <td class="tg-0pky">b</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky">m</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky">w</td>
-                                    <td class="tg-0pky">cw</td>
-                                    <td class="tg-0pky">gw</td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky">labiodental</td>
-                                    <td class="tg-0pky">f</td>
-                                    <td class="tg-0pky">v</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-sxqf"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky" rowspan="4">ridge</td>
-                                    <td class="tg-0pky" rowspan="4">alveolar</td>
-                                    <td class="tg-0pky">t</td>
-                                    <td class="tg-0pky">d</td>
-                                    <td class="tg-0pky"><span style="font-style:normal">θ</span></td>
-                                    <td class="tg-0pky">đ</td>
-                                    <td class="tg-0pky">t<span style="font-weight:400;font-style:normal">ʃ</span></td>
-                                    <td class="tg-0pky">d<span style="font-weight:400;font-style:normal">ʒ</span></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky">s</td>
-                                    <td class="tg-0pky">z</td>
-                                    <td class="tg-0pky">ʃ</td>
-                                    <td class="tg-aucg">ʒ</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky">n</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky">l</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky" rowspan="5">back</td>
-                                    <td class="tg-0pky">palatal</td>
-                                    <td class="tg-0pky">r</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky">y</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky" rowspan="2">velar</td>
-                                    <td class="tg-0pky">k</td>
-                                    <td class="tg-0pky">g</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky">ks</td>
-                                    <td class="tg-0pky">gz</td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">ŋ</span></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky" rowspan="2">guttural</td>
-                                    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">ʔ</span></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                                <tr>
-                                    <td class="tg-0pky">h</td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                    <td class="tg-0pky"></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="large-table">
+                            <table class="tg">
+                                <thead>
+                                    <tr>
+                                        <th class="tg-8jgo" colspan="2" rowspan="2">27 consonants</th>
+                                        <th class="tg-0pky" colspan="2">base letter</th>
+                                        <th class="tg-0pky" colspan="2">related</th>
+                                        <th class="tg-0pky" colspan="2">compound</th>
+                                    </tr>
+                                    <tr>
+                                        <th class="tg-0pky">/</th>
+                                        <th class="tg-0pky">voiced</th>
+                                        <th class="tg-0pky">/</th>
+                                        <th class="tg-0pky">voiced</th>
+                                        <th class="tg-0pky">/</th>
+                                        <th class="tg-0pky">voiced</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="tg-0pky" rowspan="3">lips</td>
+                                        <td class="tg-0pky" rowspan="2">bilabial</td>
+                                        <td class="tg-0pky">p</td>
+                                        <td class="tg-0pky">b</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky">m</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky">w</td>
+                                        <td class="tg-0pky">cw</td>
+                                        <td class="tg-0pky">gw</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky">labiodental</td>
+                                        <td class="tg-0pky">f</td>
+                                        <td class="tg-0pky">v</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-sxqf"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky" rowspan="4">ridge</td>
+                                        <td class="tg-0pky" rowspan="4">alveolar</td>
+                                        <td class="tg-0pky">t</td>
+                                        <td class="tg-0pky">d</td>
+                                        <td class="tg-0pky"><span style="font-style:normal">θ</span></td>
+                                        <td class="tg-0pky">đ</td>
+                                        <td class="tg-0pky">t<span style="font-weight:400;font-style:normal">ʃ</span>
+                                        </td>
+                                        <td class="tg-0pky">d<span style="font-weight:400;font-style:normal">ʒ</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky">s</td>
+                                        <td class="tg-0pky">z</td>
+                                        <td class="tg-0pky">ʃ</td>
+                                        <td class="tg-aucg">ʒ</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky">n</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky">l</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky" rowspan="5">back</td>
+                                        <td class="tg-0pky">palatal</td>
+                                        <td class="tg-0pky">r</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky">y</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky" rowspan="2">velar</td>
+                                        <td class="tg-0pky">k</td>
+                                        <td class="tg-0pky">g</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky">ks</td>
+                                        <td class="tg-0pky">gz</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky"><span style="font-weight:400;font-style:normal">ŋ</span>
+                                        </td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky" rowspan="2">guttural</td>
+                                        <td class="tg-0pky"><span style="font-weight:400;font-style:normal">ʔ</span>
+                                        </td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0pky">h</td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
 
 
                         <style>
