--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="">
 </head>
 
-<body id="body" class="">
+<body id="body">
 
     <img src="images/avatar.gif" alt="" id="avatar">
 
@@ -293,7 +293,7 @@
                             <table class="tg">
                                 <thead>
                                     <tr>
-                                        <th class="tg-8jgo" colspan="2" rowspan="2">27 consonants</th>
+                                        <th class="tg-8jgo" colspan="2" rowspan="2">29 consonants</th>
                                         <th class="tg-0pky" colspan="2">base letter</th>
                                         <th class="tg-0pky" colspan="2">related</th>
                                         <th class="tg-0pky" colspan="2">compound</th>
@@ -398,22 +398,22 @@
                                         <td class="tg-0pky"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tg-0pky" rowspan="2">guttural</td>
+                                        <td class="tg-0pky">guttural</td>
+                                        <td class="tg-0pky">h</td>
+                                        <td class="tg-0pky"></td>
                                         <td class="tg-0pky">ʔ</td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
                                     </tr>
-                                    <tr>
+                                    <!-- <tr>
                                         <td class="tg-0pky">h</td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
-                                    </tr>
+                                    </tr> -->
                                 </tbody>
                             </table>
                         </div>
@@ -457,15 +457,16 @@
                         <h2>Writing consonants</h2>
 
                         <p>The 29 consonant sounds are graphically represented according to the above classification,
-                            with character type indicating
-                            family and diacritics indicating position in a series.</p>
+                            with general character shape indicating location in the mouth, each individual character
+                            indicating a series of similar sounds, and diacritics distinguishing each sound in the
+                            series.</p>
 
-
-                        <div class="large-table">
+                        <div class="large-table simple-script">
                             <table class="tg">
                                 <thead>
                                     <tr>
-                                        <th class="tg-0lax" colspan="2" rowspan="2"></th>
+                                        <th class="tg-8jgo" colspan="2" rowspan="2">Consonant shape and diacritics
+                                        </th>
                                         <th class="tg-0lax" colspan="2">base</th>
                                         <th class="tg-0lax" colspan="2">related</th>
                                         <th class="tg-0lax" colspan="2">compound</th>
@@ -482,34 +483,35 @@
                                 <tbody>
                                     <tr>
                                         <td class="tg-0lax">lips</td>
-                                        <td class="tg-0lax">|…</td>
-                                        <td class="tg-0lax" rowspan="3"></td>
+                                        <td class="tg-0lax">!</td>
+                                        <td class="tg-0lax" rowspan="3">;</td>
+                                        <td class="tg-0lax" rowspan="3">,</td>
+                                        <td class="tg-0lax" rowspan="3">.</td>
                                         <td class="tg-0lax" rowspan="3">'</td>
-                                        <td class="tg-0lax" rowspan="3">*</td>
-                                        <td class="tg-0lax" rowspan="3">/</td>
+                                        <td class="tg-0lax" rowspan="3">:</td>
                                         <td class="tg-0lax" rowspan="3">"</td>
-                                        <td class="tg-0lax" rowspan="3">\</td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0lax">ridge</td>
-                                        <td class="tg-0lax">…|</td>
+                                        <td class="tg-0lax">?</td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0lax">back</td>
-                                        <td class="tg-0lax">…</td>
+                                        <td class="tg-0lax">;</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
 
                         <p>When written, the 29 consonants follow this basic pattern. One exception for practicality:
-                            the voiced diacritic is unnecessary for voiced consonants with no unvoiced counterpart (e.g.
-                            n).</p>
-                        <div class="large-table">
+                            the voiced diacritic is unnecessary for voiced consonants with no unvoiced counterpart (m,
+                            n, l, r, ŋ).</p>
+
+                        <div class="large-table script">
                             <table class="tg">
                                 <thead>
                                     <tr>
-                                        <th class="tg-8jgo" colspan="2" rowspan="2">27 consonants</th>
+                                        <th class="tg-8jgo" colspan="2" rowspan="2">11 characters</th>
                                         <th class="tg-0pky" colspan="2">base letter</th>
                                         <th class="tg-0pky" colspan="2">related</th>
                                         <th class="tg-0pky" colspan="2">compound</th>
@@ -614,22 +616,22 @@
                                         <td class="tg-0pky"></td>
                                     </tr>
                                     <tr>
-                                        <td class="tg-0pky" rowspan="2">guttural</td>
+                                        <td class="tg-0pky">guttural</td>
+                                        <td class="tg-0pky">h</td>
+                                        <td class="tg-0pky"></td>
                                         <td class="tg-0pky">H</td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
                                     </tr>
-                                    <tr>
+                                    <!-- <tr>
                                         <td class="tg-0pky">h</td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
                                         <td class="tg-0pky"></td>
-                                    </tr>
+                                    </tr> -->
                                 </tbody>
                             </table>
                         </div>
@@ -643,31 +645,31 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
                             suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
                             cupiditate eaque quis vel?</p>
-                        <img src="images/legend/light/0.png" alt="" class="theme-img" id="legend">
+                        <img src="assets/images/legend/light/0.png" alt="" class="theme-img" id="legend">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
                             suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
                             cupiditate eaque quis vel?</p>
-                        <img src="images/legend/light/1.png" alt="" class="theme-img" id="legend">
+                        <img src="assets/images/legend/light/1.png" alt="" class="theme-img" id="legend">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
                             suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
                             cupiditate eaque quis vel?</p>
-                        <img src="images/legend/light/2.png" alt="" class="theme-img" id="legend">
+                        <img src="assets/images/legend/light/2.png" alt="" class="theme-img" id="legend">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
                             suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
                             cupiditate eaque quis vel?</p>
-                        <img src="images/legend/light/3.png" alt="" class="theme-img" id="legend">
+                        <img src="assets/images/legend/light/3.png" alt="" class="theme-img" id="legend">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
                             suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
                             cupiditate eaque quis vel?</p>
-                        <img src="images/legend/light/4.png" alt="" class="theme-img" id="legend">
+                        <img src="assets/images/legend/light/4.png" alt="" class="theme-img" id="legend">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
                             suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
                             cupiditate eaque quis vel?</p>
-                        <img src="images/legend/light/5.png" alt="" class="theme-img" id="legend">
+                        <img src="assets/images/legend/light/5.png" alt="" class="theme-img" id="legend">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nihil fugiat, facilis iusto
                             suscipit consectetur facere tempora ab aperiam hic! Ea eos quaerat animi sapiente minima
                             cupiditate eaque quis vel?</p>
-                        <img src="images/legend/light/6.png" alt="" class="theme-img" id="legend">
+                        <img src="assets/images/legend/light/6.png" alt="" class="theme-img" id="legend">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta illum nam corrupti, commodi
                             blanditiis iusto atque corporis voluptate voluptatibus expedita itaque, nisi voluptatem
                             delectus perferendis quod eaque, eligendi exercitationem eos!
